remove untracked files

--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,7 @@
 DEBUG=True
-SECRET_KEY='fuv*1z4phd1ros!541@b_cf3aniqda4*+yp9cirtg_i24ts*z8'
-DB_NAME=fastduka_express_local
-DB_PASSWORD='password'
-DB_USER='postgres'
+SECRET_KEY=''
+DB_NAME=
+DB_PASSWORD=''
+DB_USER=''
 STATIC_APP=static
 ALLOWED_HOSTS='*'
