--- a/requirements.txt
+++ b/requirements.txt
@@ -8,18 +8,20 @@ django-cors-headers==3.7.0
 django-environ==0.4.5
 django-filter==2.4.0
 djangorestframework==3.12.4
-djangorestframework-simplejwt==4.7.1
+djangorestframework-simplejwt==4.4.0
 idna==2.10
+importlib-metadata==4.5.0
 itypes==1.2.0
 Jinja2==3.0.1
 Markdown==3.3.4
 MarkupSafe==2.0.1
 psycopg2==2.8.6
 Pygments==2.9.0
-PyJWT==2.1.0
+PyJWT==1.7.1;
 pytz==2021.1
 requests==2.25.1
 sqlparse==0.4.1
 typing-extensions==3.10.0.0
 uritemplate==3.0.1
 urllib3==1.26.5
+zipp==3.4.1
