--- a/requirements.txt
+++ b/requirements.txt
@@ -8,14 +8,14 @@ django-cors-headers==3.7.0
 django-environ==0.4.5
 django-filter==2.4.0
 djangorestframework==3.12.4
-djangorestframework-simplejwt==4.4.0
+djangorestframework-simplejwt==4.6.0
 idna==2.10
 importlib-metadata==4.5.0
 itypes==1.2.0
 Jinja2==3.0.1
 Markdown==3.3.4
 MarkupSafe==2.0.1
-psycopg2==2.8.6
+psycopg2-binary==2.9.1
 Pygments==2.9.0
 PyJWT==1.7.1;
 pytz==2021.1
