--- a/.env.example
+++ b/.env.example
@@ -5,3 +5,9 @@ DB_PASSWORD=''
 DB_USER=''
 STATIC_APP=static
 ALLOWED_HOSTS='*'
+EMAIL_HOST =''
+EMAIL_PORT=''
+EMAIL_HOST_USER=''
+EMAIL_HOST_PASSWORD=''
+EMAIL_USE_TLS=''
+EMAIL_USE_SSL=''
