--- a/.env.example
+++ b/.env.example
@@ -5,9 +5,11 @@ DB_PASSWORD=''
 DB_USER=''
 STATIC_APP=static
 ALLOWED_HOSTS='*'
-EMAIL_HOST =''
-EMAIL_PORT=''
+
+
+EMAIL_HOST=''
+EMAIL_PORT=587
 EMAIL_HOST_USER=''
 EMAIL_HOST_PASSWORD=''
-EMAIL_USE_TLS=''
-EMAIL_USE_SSL=''
+EMAIL_USE_TLS=True
+APP_URL='http://localhost:8000'
