--- a/requirements.txt
+++ b/requirements.txt
@@ -17,7 +17,8 @@ Markdown==3.3.4
 MarkupSafe==2.0.1
 psycopg2-binary==2.9.1
 Pygments==2.9.0
-PyJWT==1.7.1;
+PyJWT==1.7.1
+pyotp==2.6.0
 pytz==2021.1
 requests==2.25.1
 sqlparse==0.4.1
